fix tagswrap overflowing files table

--- a/app/assets/stylesheets/folio/console/modules/reacty/_file-table-list.sass
+++ b/app/assets/stylesheets/folio/console/modules/reacty/_file-table-list.sass
@@ -87,6 +87,7 @@
 
     &__tbody
       display: table
+      width: 100%
 
   +media-breakpoint-down(md)
     &__tbody
